# data_analytics_jr_test

./: .gitignore  README.md  Test.md  pyproject.toml
bi/: dashboard_escola.pbip
bi/dashboard_escola.Report/: .platform  definition.pbir  report.json
bi/dashboard_escola.Report/StaticResources/RegisteredResources/: Storm3579948107682036.json
bi/dashboard_escola.SemanticModel/: .platform  diagramLayout.json  model.bim
notebooks/: 00_rascunho.ipynb  01_datacleaning.ipynb  01_dataclening.ipynb  01_rascunho.ipynb  02_rascunho.ipynb  02_regex.ipynb  03_analytics.ipynb  teste.csv
src/: 1.2_extraction.py  1_extraction.py  2_transformation.py  3_loading.py
src/sql/ddl/: 0_creating_schemas.sql
src/sql/dml/: 01_escolas_alunos_relacao.sql
test/: 1_extraction.py  rascunho.py  rascunho2.py  rascunho3.py
