[tool.poetry]
name = "data-analytics-jr-test"
version = "0.1.0"
description = ""
authors = ["Davi Henrique <davihscoelho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
duckdb = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
